# kalimba-transcription

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini
.claude/skills/: audio-diagnose.md  audio-pitch.md  score-alignment.md
.github/workflows/: test.yml
apps/api/: requirements.txt
apps/web/: next.config.ts  package.json
artifacts/: repeat03-current.json  repeat03-full-response.json  repeat03-pass-trace.txt  tmp-c4-to-g4-after.json  tmp-c4-to-g4-after2.json  tmp-c4-to-g4-after3.json  tmp-repeat03-after2.json
artifacts/analysis/: c4_to_e6_sequence_17_repeat3.json  c4_to_e6_sequence_17_single.json  c4_to_g4_sequence_17.json  repeated_pass_ablation_2026-03-24.json  repeated_pass_ablation_latest.json  repeated_pass_group_ablation_2026-03-24.json  repeated_pass_pairwise_four_note_2026-03-24.json  repeated_pass_pairwise_gliss_strict_2026-03-24.json
crates/kalimba-dsp/: Cargo.toml  pyproject.toml
crates/kalimba-dsp/src/: lib.rs
docs/: api-contract-design.md  app-synth-audio-gap-analysis.md  architecture.md  arpeggio-design.md  browser-migration-analysis.md  deferred-ideas.md  free-performance-readiness.md  issue-43-leading-gap-noise-analysis.md  per-note-onset-detection-design.md  recognition-roadmap.md  recognizer-local-rules.md  strategy-b-gap-candidates.md  task-management.md  testing.md  video-expected-performance-analysis.md
docs/performance/: 20260415-profiling-baseline.md
docs/research/: 20260406-deep-research-report.md  (+2 more)
scripts/: analyze_expected_performance_video.py  audit_manual_captures.py  audit_repeated_pattern_ablation.py  diagnose_bwv147_rejections.py  explain_manual_capture.py  extract_manual_capture_segment.py  import_manual_capture.py  sync_fixture_responses.py  video_expected_performance.py
(+316 files in other folders)
