[project]
name = "kalimba-transcription"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.135.2",
    "kalimba-dsp",
    "librosa>=0.11.0",
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-xdist>=3.5.0",
]

[[tool.uv.index]]
name = "takumi-guard"
url = "https://pypi.flatt.tech/simple/"
default = true

[tool.uv.sources]
kalimba-dsp = { path = "crates/kalimba-dsp", editable = true }
